# optional

./: .gitmodules  CMakeLists.txt  README.md
.cmake/: optionalConfig.cmake
cmake/: CTestCustom.cmake  shacl-optional-config.cmake
include/shacl/: CMakeLists.txt  optional.hpp
include/shacl/optional/: CMakeLists.txt  Type.hpp  bad_access.hpp  bind.hpp  detail.hpp  make.hpp  nullopt.hpp
include/shacl/optional/Type/: CMakeLists.txt  comparison.hpp  emplace.hpp  swap.hpp  value.hpp  value_or.hpp
include/shacl/optional/Type/test/: CMakeLists.txt  dtor.test.cpp  has_value.test.cpp  inequality.test.cpp  swap.test.cpp
include/shacl/optional/bind/test/: CMakeLists.txt
include/shacl/optional/detail/: CMakeLists.txt  CopyAssign.hpp  Enabled.hpp  Move.hpp  MoveAssign.hpp
include/shacl/optional/map/test/: CMakeLists.txt  map.test.cpp
src/shacl/: CMakeLists.txt  optional.hpp
src/shacl/optional/: CMakeLists.txt  IsInstance.hpp  Type.hpp  bad_access.hpp  bind.hpp  comparison.hpp  detail.hpp  make.hpp  map.hpp
src/shacl/optional/Type/: CMakeLists.txt  assignment.hpp  ctor.hpp  emplace.hpp
src/shacl/optional/Type/test/: CMakeLists.txt  assignment.test.cpp  copy.test.cpp  copyAssign.test.cpp  dereference.test.cpp  equality.test.cpp  move.test.cpp  moveAssign.test.cpp  reset.test.cpp  value.test.cpp  value_or.test.cpp
src/shacl/optional/bind/test/: CMakeLists.txt
src/shacl/optional/detail/: CMakeLists.txt  Copy.hpp  Curry.hpp  Enable.hpp  Operations.hpp  Storage.hpp  all.hpp
src/shacl/optional/map/: README.md
src/shacl/optional/map/test/: CMakeLists.txt  map.test.cpp
